# oTree_instruction

./: .gitignore  README.md  go.mod  go.sum  hugo.toml  netlify.toml  pyproject.toml
content/: _index.md
content/concepts/: _index.md  data.md  experiment.md  orm-models.md  otree-mapping.md
content/reference/models/: group.md  player.md  subsession.md
content/tutorial/: _index.md  models.md  pages.md  preparation.md  project-setup.md  templates.md
content/tutorial/running/: index.md
layouts/partials/: head.html
layouts/shortcodes/: details.html  glossary.html  stepcode.html
static/css/: custom.css
