[project]
name = "otree-instruction"
version = "0.1.0"
description = ""
authors = [
    {name = "takahiro",email = "takamiura12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "otree (==6.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
